target/com/proteus/preprocess/pp/gen/P416PPParser.java
// Generated from P416PPParser.g4 by ANTLR 4.4
package com.proteus.preprocess.pp.gen;

        import com.proteus.preprocess.pp.ext.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class P416PPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PREPROCESS_DEFINE=9, PREPROCESS_UNDEF=10, PREPROCESS_INCLUDE=8, PREPROCESS_IF=13, 
		COMMENT_BLOCK=1, WS=5, NEWLINE=6, NL_ESC=3, COMMA=21, PAREN_CLOSE=23, 
		PREPROCESS_IFNDEF=12, DEFINED=19, PREPROCESS_PRAGMA=17, PREPROCESS_ELSE=14, 
		CHAR=24, PREPROCESS_ERROR=18, PREPROCESS_ENDIF=16, PAREN_OPEN=22, ID=20, 
		PREPROCESS_BEGIN=7, PREPROCESS_ELIF=15, COMMENT_LINE=2, PREPROCESS_IFDEF=11, 
		STRING=4;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT_BLOCK", "COMMENT_LINE", "NL_ESC", "STRING", "WS", 
		"NEWLINE", "'#'", "'include'", "'define'", "'undef'", "'ifdef'", "'ifndef'", 
		"'if'", "'else'", "'elif'", "'endif'", "'pragma'", "'error'", "'defined'", 
		"ID", "','", "'('", "')'", "CHAR"
	};
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_preprocess = 2, RULE_ppId = 3, 
		RULE_ppChar = 4, RULE_ppChars = 5, RULE_ppInclude = 6, RULE_ppPragma = 7, 
		RULE_ppError = 8, RULE_ppUndef = 9, RULE_ppDefineVar = 10, RULE_ppDefineFunc = 11, 
		RULE_ppdfId = 12, RULE_ppdfiArguments = 13, RULE_ppdfiArgument = 14, RULE_ppdfChars = 15, 
		RULE_ppdfcId = 16, RULE_ppdfcNotId = 17, RULE_ppIfStatement = 18, RULE_ppisIF = 19, 
		RULE_ppisElif = 20, RULE_ppisElse = 21, RULE_ppisEndif = 22, RULE_ppisIfDef = 23, 
		RULE_ppisIfNdef = 24, RULE_ppisStatement = 25, RULE_ppisElifElseEndif = 26, 
		RULE_ppisElseEndif = 27;
	public static final String[] ruleNames = {
		"program", "statement", "preprocess", "ppId", "ppChar", "ppChars", "ppInclude", 
		"ppPragma", "ppError", "ppUndef", "ppDefineVar", "ppDefineFunc", "ppdfId", 
		"ppdfiArguments", "ppdfiArgument", "ppdfChars", "ppdfcId", "ppdfcNotId", 
		"ppIfStatement", "ppisIF", "ppisElif", "ppisElse", "ppisEndif", "ppisIfDef", 
		"ppisIfNdef", "ppisStatement", "ppisElifElseEndif", "ppisElseEndif"
	};

	@Override
	public String getGrammarFileName() { return "P416PPParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public P416PPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContextExt extendedContext;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode EOF() { return getToken(P416PPParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT_BLOCK) | (1L << COMMENT_LINE) | (1L << STRING) | (1L << WS) | (1L << NEWLINE) | (1L << PREPROCESS_BEGIN) | (1L << PREPROCESS_IF) | (1L << PREPROCESS_ELSE) | (1L << PREPROCESS_ERROR) | (1L << DEFINED) | (1L << ID) | (1L << COMMA) | (1L << PAREN_OPEN) | (1L << PAREN_CLOSE) | (1L << CHAR))) != 0)) {
				{
				{
				setState(56); statement();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContextExt extendedContext;
		public TerminalNode NEWLINE() { return getToken(P416PPParser.NEWLINE, 0); }
		public PpCharsContext ppChars() {
			return getRuleContext(PpCharsContext.class,0);
		}
		public TerminalNode COMMENT_BLOCK() { return getToken(P416PPParser.COMMENT_BLOCK, 0); }
		public PreprocessContext preprocess() {
			return getRuleContext(PreprocessContext.class,0);
		}
		public TerminalNode STRING() { return getToken(P416PPParser.STRING, 0); }
		public TerminalNode COMMENT_LINE() { return getToken(P416PPParser.COMMENT_LINE, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(71);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64); preprocess();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				_la = _input.LA(1);
				if ( !(_la==COMMENT_BLOCK || _la==COMMENT_LINE) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66); match(STRING);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				switch (_input.LA(1)) {
				case STRING:
				case WS:
				case PREPROCESS_BEGIN:
				case PREPROCESS_IF:
				case PREPROCESS_ELSE:
				case PREPROCESS_ERROR:
				case DEFINED:
				case ID:
				case COMMA:
				case PAREN_OPEN:
				case PAREN_CLOSE:
				case CHAR:
					{
					setState(67); ppChars();
					}
					break;
				case NEWLINE:
					{
					setState(68); match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreprocessContext extends ParserRuleContext {
		public PreprocessContextExt extendedContext;
		public PpIncludeContext ppInclude() {
			return getRuleContext(PpIncludeContext.class,0);
		}
		public PpPragmaContext ppPragma() {
			return getRuleContext(PpPragmaContext.class,0);
		}
		public PpDefineFuncContext ppDefineFunc() {
			return getRuleContext(PpDefineFuncContext.class,0);
		}
		public PpErrorContext ppError() {
			return getRuleContext(PpErrorContext.class,0);
		}
		public PpDefineVarContext ppDefineVar() {
			return getRuleContext(PpDefineVarContext.class,0);
		}
		public PpIfStatementContext ppIfStatement() {
			return getRuleContext(PpIfStatementContext.class,0);
		}
		public PpUndefContext ppUndef() {
			return getRuleContext(PpUndefContext.class,0);
		}
		public PreprocessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPreprocess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPreprocess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPreprocess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocessContext preprocess() throws RecognitionException {
		PreprocessContext _localctx = new PreprocessContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_preprocess);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73); ppInclude();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74); ppDefineFunc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75); ppDefineVar();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76); ppUndef();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(77); ppPragma();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(78); ppError();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(79); ppIfStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpIdContext extends ParserRuleContext {
		public PpIdContextExt extendedContext;
		public TerminalNode ID() { return getToken(P416PPParser.ID, 0); }
		public PpIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpIdContext ppId() throws RecognitionException {
		PpIdContext _localctx = new PpIdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ppId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpCharContext extends ParserRuleContext {
		public PpCharContextExt extendedContext;
		public TerminalNode CHAR() { return getToken(P416PPParser.CHAR, 0); }
		public PpCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppChar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpCharContext ppChar() throws RecognitionException {
		PpCharContext _localctx = new PpCharContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ppChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(CHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpCharsContext extends ParserRuleContext {
		public PpCharsContextExt extendedContext;
		public List<TerminalNode> DEFINED() { return getTokens(P416PPParser.DEFINED); }
		public TerminalNode DEFINED(int i) {
			return getToken(P416PPParser.DEFINED, i);
		}
		public TerminalNode PAREN_OPEN(int i) {
			return getToken(P416PPParser.PAREN_OPEN, i);
		}
		public TerminalNode STRING(int i) {
			return getToken(P416PPParser.STRING, i);
		}
		public List<TerminalNode> WS() { return getTokens(P416PPParser.WS); }
		public TerminalNode PREPROCESS_ELSE(int i) {
			return getToken(P416PPParser.PREPROCESS_ELSE, i);
		}
		public PpCharContext ppChar(int i) {
			return getRuleContext(PpCharContext.class,i);
		}
		public List<TerminalNode> PREPROCESS_BEGIN() { return getTokens(P416PPParser.PREPROCESS_BEGIN); }
		public TerminalNode WS(int i) {
			return getToken(P416PPParser.WS, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(P416PPParser.COMMA, i);
		}
		public List<TerminalNode> PREPROCESS_ERROR() { return getTokens(P416PPParser.PREPROCESS_ERROR); }
		public TerminalNode PREPROCESS_ERROR(int i) {
			return getToken(P416PPParser.PREPROCESS_ERROR, i);
		}
		public List<TerminalNode> PAREN_CLOSE() { return getTokens(P416PPParser.PAREN_CLOSE); }
		public TerminalNode PREPROCESS_IF(int i) {
			return getToken(P416PPParser.PREPROCESS_IF, i);
		}
		public PpIdContext ppId(int i) {
			return getRuleContext(PpIdContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(P416PPParser.COMMA); }
		public TerminalNode PREPROCESS_BEGIN(int i) {
			return getToken(P416PPParser.PREPROCESS_BEGIN, i);
		}
		public List<PpIdContext> ppId() {
			return getRuleContexts(PpIdContext.class);
		}
		public List<TerminalNode> PAREN_OPEN() { return getTokens(P416PPParser.PAREN_OPEN); }
		public List<TerminalNode> PREPROCESS_IF() { return getTokens(P416PPParser.PREPROCESS_IF); }
		public List<TerminalNode> PREPROCESS_ELSE() { return getTokens(P416PPParser.PREPROCESS_ELSE); }
		public List<PpCharContext> ppChar() {
			return getRuleContexts(PpCharContext.class);
		}
		public List<TerminalNode> STRING() { return getTokens(P416PPParser.STRING); }
		public TerminalNode PAREN_CLOSE(int i) {
			return getToken(P416PPParser.PAREN_CLOSE, i);
		}
		public PpCharsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppChars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpChars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpChars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpChars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpCharsContext ppChars() throws RecognitionException {
		PpCharsContext _localctx = new PpCharsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ppChars);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(98);
					switch (_input.LA(1)) {
					case STRING:
						{
						setState(86); match(STRING);
						}
						break;
					case WS:
						{
						setState(87); match(WS);
						}
						break;
					case PREPROCESS_BEGIN:
						{
						setState(88); match(PREPROCESS_BEGIN);
						}
						break;
					case DEFINED:
						{
						setState(89); match(DEFINED);
						}
						break;
					case ID:
						{
						setState(90); ppId();
						}
						break;
					case PREPROCESS_ERROR:
						{
						setState(91); match(PREPROCESS_ERROR);
						}
						break;
					case PREPROCESS_IF:
						{
						setState(92); match(PREPROCESS_IF);
						}
						break;
					case PREPROCESS_ELSE:
						{
						setState(93); match(PREPROCESS_ELSE);
						}
						break;
					case COMMA:
						{
						setState(94); match(COMMA);
						}
						break;
					case PAREN_OPEN:
						{
						setState(95); match(PAREN_OPEN);
						}
						break;
					case PAREN_CLOSE:
						{
						setState(96); match(PAREN_CLOSE);
						}
						break;
					case CHAR:
						{
						setState(97); ppChar();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(100); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpIncludeContext extends ParserRuleContext {
		public PpIncludeContextExt extendedContext;
		public TerminalNode NEWLINE() { return getToken(P416PPParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(P416PPParser.EOF, 0); }
		public List<TerminalNode> WS() { return getTokens(P416PPParser.WS); }
		public PpCharsContext ppChars() {
			return getRuleContext(PpCharsContext.class,0);
		}
		public TerminalNode PREPROCESS_BEGIN() { return getToken(P416PPParser.PREPROCESS_BEGIN, 0); }
		public TerminalNode WS(int i) {
			return getToken(P416PPParser.WS, i);
		}
		public TerminalNode PREPROCESS_INCLUDE() { return getToken(P416PPParser.PREPROCESS_INCLUDE, 0); }
		public PpIncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppInclude; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpInclude(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpIncludeContext ppInclude() throws RecognitionException {
		PpIncludeContext _localctx = new PpIncludeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ppInclude);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(PREPROCESS_BEGIN);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(103); match(WS);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109); match(PREPROCESS_INCLUDE);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(110); match(WS);
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(116); ppChars();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(117); match(WS);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NEWLINE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpPragmaContext extends ParserRuleContext {
		public PpPragmaContextExt extendedContext;
		public TerminalNode NEWLINE() { return getToken(P416PPParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(P416PPParser.EOF, 0); }
		public List<TerminalNode> WS() { return getTokens(P416PPParser.WS); }
		public PpCharsContext ppChars() {
			return getRuleContext(PpCharsContext.class,0);
		}
		public TerminalNode PREPROCESS_BEGIN() { return getToken(P416PPParser.PREPROCESS_BEGIN, 0); }
		public TerminalNode WS(int i) {
			return getToken(P416PPParser.WS, i);
		}
		public TerminalNode PREPROCESS_PRAGMA() { return getToken(P416PPParser.PREPROCESS_PRAGMA, 0); }
		public PpPragmaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppPragma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpPragma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpPragma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpPragma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PpPragmaContext ppPragma() throws RecognitionException {
		PpPragmaContext _localctx = new PpPragmaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ppPragma);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(PREPROCESS_BEGIN);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(126); match(WS);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132); match(PREPROCESS_PRAGMA);
			setState(136);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(133); match(WS);
					}
					} 
				}
				setState(138);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(139); ppChars();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(140); match(WS);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NEWLINE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PpErrorContext extends ParserRuleContext {
		public PpErrorContextExt extendedContext;
		public TerminalNode NEWLINE() { return getToken(P416PPParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(P416PPParser.EOF, 0); }
		public List<TerminalNode> WS() { return getTokens(P416PPParser.WS); }
		public PpCharsContext ppChars() {
			return getRuleContext(PpCharsContext.class,0);
		}
		public TerminalNode PREPROCESS_BEGIN() { return getToken(P416PPParser.PREPROCESS_BEGIN, 0); }
		public TerminalNode WS(int i) {
			return getToken(P416PPParser.WS, i);
		}
		public TerminalNode PREPROCESS_ERROR() { return getToken(P416PPParser.PREPROCESS_ERROR, 0); }
		public PpErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ppError; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).enterPpError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof P416PPParserListener ) ((P416PPParserListener)listener).exitPpError(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof P416PPParserVisitor ) return ((P416PPParserVisitor<? extends T>)visitor).visitPpError(this);
			else return visitor.visitChildren(this);
		}
	}
